--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: hsl(185, 75%, 39%);
     font-size: 16px;
     font-family: Kumbh Sans;
-    margin:auto;
+    margin-bottom:auto;
     height: auto;
     width: auto;
 }
@@ -13,36 +13,36 @@ hr {
 }
 
 .top-bg-img {
-    position: absolute;
+    position: fixed;
     z-index: -1;
     bottom: 330px;
     right: 650px;
 }
 
 .bottom-bg-img {
-    position: absolute;
+    position: fixed;
     z-index: -1;
     top: 390px;
     left: 570px;
 }
+
 .card-main {
     display: grid;
     justify-content: center;
     border-radius: 15px;
 }
-/* .container {
-    border: 2px black solid;
+
+.card-body {
+    background-color: white;
     margin: 100px 0 10px 0;
     border-radius: 15px;
-} */
+}
 
-
-/* header {
-    z-index: 1;
-    border: 2px solid black;
-    z-index: 1;
-    background-color: transparent;
-} */
+.profile-details {
+    display: grid;
+    grid-template-columns: 50px 50px 50px;
+    justify-content: space-around;
+}
 
 .img-header {
     border-top-left-radius: 15px;
@@ -51,10 +51,10 @@ hr {
 }
 
 .img-div {
-    position: absolute;
-    top: 200px;
-    left: 630px;
+    position: relative;
+    bottom: 40px;
     text-align: center;
+    height: 50px;
 }
 
 .profile-pic {
@@ -62,7 +62,6 @@ hr {
     border-radius: 50%;
 }
 .profile-name {
-    margin-top: 50px;
     text-align: center;
     display: grid;
     grid-template-columns: 100px 10px;
@@ -76,21 +75,12 @@ hr {
     color: hsl(227, 10%, 46%);
     font-weight: 400;
 }
-.card-body{
-    background-color: white;
-    margin: 100px 0 10px 0;
-    border-radius: 15px;
-}
 
-.profile-details {
-    display: grid;
-    grid-template-columns: 50px 50px 50px;
-    justify-content: space-around;
-}
 .profile-fig {
     font-weight: 700;
     color: hsl(229, 23%, 23%);
 }
+
 .profile-attr {
     color: hsl(0, 0%, 59%);
     font-size: 14px;
@@ -100,7 +90,7 @@ hr {
     font-size: 11px; 
     text-align: center; 
 }
-    .attribution a { 
-        color: white;
-        text-decoration: none;
+.attribution a { 
+    color: white;
+    text-decoration: none;
     }
